<resources>
    <string name="app_name">THE BINGO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lobby">activity_lobby</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_message">Enter your name</string>
    <string name="button_send">SEND</string>
    <string name="title">BINGO PARTY</string>
    <string name="subtitle">Inserisci il tuo nome</string>

    <!-- Winner -->
    <string name="winner_title">THE WINNER IS</string>
    <string name="winner_name">WinnerName</string>
    <string name="close_btn">CLOSE CONNECTION</string>

    <!-- PreGameLobby -->
    <string name="title_preGL">PRE GAME LOBBY</string>
    <string name="threeDots">...</string>

    <!-- Lobby -->
    <string name="lobby_title">PLAYER LOBBY</string>

    <!-- GameLoop -->
    <string name="bingo_btn">BINGO</string>

    <!-- CardSelection -->
    <string name="cardsel_title">NUMERO TABELLE:</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="num">1</string>
    <string name="enter_btn">ENTER</string>

</resources>